--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-matplotlib==3.9.2
-pandas==2.2.2
-py7zr==0.22.0
-seaborn==0.13.2
+matplotlib>=3.9.2
+pandas>=2.2.2
+py7zr>=0.22.0
+seaborn>=0.13.2
+openpyxl>=3.0.9
